--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ body {
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 input,
